# pySMESH

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
.github/workflows/: ci.yml
SMESH/: __init__.py
SMESH/Visualization/: MeshViewerQt.py  MeshViewerWx.py  __init__.py
binder/: config.txt  environment.yml  run.py
ci/conda/: bld.bat  build.sh  meta.yaml
examples/: smesh_netgen_2d.py  smesh_netgen_3d.py  test.out
inc/: SALOMEconfig.h  pySMESH_Common.hxx  pySMESH_ng.hxx
src/: BaseTraceCollector.cxx  BasicsGenericDestructor.cxx  BasicsGenericDestructor_Templates.hxx  Driver.cxx  DriverDAT.cxx  DriverGMF.cxx  DriverSTL.cxx  DriverUNV.cxx  LocalTraceBufferPool.cxx  NCollection_Templates.hxx  NETGENPlugin.cxx  ObjectPool_Templates.hxx  SMDS.cxx  SMDSAbs.cxx  SMDS_Templates.hxx  SMESH.cxx  SMESHDS.cxx  SMESHDS_Templates.hxx  SMESH_Templates.hxx  STL_Templates.hxx  StdMeshers.cxx  Utils.cxx
test/: test.out  test_NETGENPlugin.py
